# AoC2022

./: .gitignore  CMakeLists.txt  main.c
days/: 0.c  1.c  10.c  11.c  12.c  13.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
utils/: bit_print.h  cvec.c  cvec.h  dijkstra.c  dijkstra.h  file_reader.c  file_reader.h  linked_list.c  linked_list.h
